--- a/data/model/source/muller/muller-afd3.yml
+++ b/data/model/source/muller/muller-afd3.yml
@@ -4,10 +4,15 @@ document:
     - 2021-04-12 13:02:56+01:00: Thierry Graff, creation
 
 name: Astro-Forschungs-Daten 3
-slug: AFD3
+slug: afd3
+type: booklet
+authors:
+  - Arno Müller
+  - Edith Lührs 
 description: |
   Booklet Astro-Forschungs-Daten 3, Arno Müller, Waldmohr, 1993
+  76 pages
   Self-edited by Arno Müller.
   Contains a list of 234 famous women.
-source:
-  parents: ['AFD']
+parents: 
+  - afd
