--- a/data/model/source/newalch.yml
+++ b/data/model/source/newalch.yml
@@ -5,7 +5,7 @@ document:
 
 name: newalchemypress.com
 slug: newalch
+type: website
 description: |
   Web site https://newalchemypress.com/
-source:
-  parents: []
+  Site created by Nick Kollesrtrom
