--- a/data/model/source/muller/Astro-Forschungs-Daten.yml
+++ b/data/model/source/muller/Astro-Forschungs-Daten.yml
@@ -4,14 +4,16 @@ document:
     - 2020-05-16 01:32:26+02:00, Thierry Graff : Creation
 
 name: Astro-Forschungs-Daten
-slug: AFD
+slug: afd
+type: booklets
+author: Arno Müller
 description: |
   Five booklets self-published by Arno Müller, 1991 - 1994
-  5 volumes containing 3476 birth times
+  5 volumes containing birth times
     402 Italian writers
     612 Famous Men
     234 Famous Women
     1145 members of German dynasties
     1083 members of the French Academie de Medicine
-  # 402+612+234+1145+1083 = 3476
+  (total 402+612+234+1145+1083 = 3476)
   In fact, contains more, these are the numbers of published groups.
