--- a/src/model/Source.yml
+++ b/src/model/Source.yml
@@ -5,12 +5,19 @@
 
 id: 
 
-slug:
+slug: 
 
+# file, website, booklet, book
+type: 
+
+# for a book, means title
 name: 
+
+# specific to sources of type book
+authors: 
+edition: 
+isbn: 
 
 description: |
 
-source:
-  parents: [] # list of source slugs
-  
+parents: [] # list of source slugs
