Add command db fill source

--- a/data/model/source/cura5.yml
+++ b/data/model/source/cura5.yml
@@ -7,6 +7,7 @@ document:
 name: cura.free.fr
 slug: cura5
 type: website
+author: Patrice Guinard
 description: |
   Web site http://cura.free.fr
   This information source refers to version 5 of CURA database, prior to November 2020.
