--- a/data/model/source/g5.yml
+++ b/data/model/source/g5.yml
@@ -6,6 +6,7 @@ document:
 name: Gauquelin5
 slug: g5
 type: website
+author: Thierry Graff
 description: |
   Computer program hosted on https://github.com/tig12/gauquelin5
   Started by Thierry Graff in 2017
