--- a/data/model/source/muller/5a_muller_medics.yml
+++ b/data/model/source/muller/5a_muller_medics.yml
@@ -3,7 +3,7 @@ document:
   history:
     - 2020-08-16 20:30:47+02:00: Thierry Graff, creation
 
-name: newalchemypress.com file 5a_muller_medics.txt
+name: 5a_muller_medics.txt
 slug: 5a_muller_medics
 type: file
 author: Arno Müller
