--- a/data/model/source/newalch.yml
+++ b/data/model/source/newalch.yml
@@ -6,6 +6,7 @@ document:
 name: newalchemypress.com
 slug: newalch
 type: website
+author: Nick Kollesrtrom
 description: |
   Web site https://newalchemypress.com/
-  Site created by Nick Kollesrtrom
+  https://newalchemypress.com/gauquelin/
