Refactor and complete information source management

--- a/data/model/source/g5.yml
+++ b/data/model/source/g5.yml
@@ -8,5 +8,5 @@ slug: g5
 type: website
 author: Thierry Graff
 description: |
-  Computer program hosted on https://github.com/tig12/gauquelin5
-  Started by Thierry Graff in 2017
+  Computer program hosted on https://github.com/tig12/gauquelin5, used to build the open Gauquelin database (current site).
+  
