--- a/data/model/source/muller/afd1-writers-booklet.yml
+++ b/data/model/source/muller/afd1-writers-booklet.yml
@@ -4,7 +4,7 @@ document:
     - 2020-08-18 19:17:32+02:00: Thierry Graff, creation
 
 name: Astro-Forschungs-Daten 1
-slug: afd1
+slug: afd1-booklet
 type: booklet
 author: Arno Müller
 description: |
@@ -12,7 +12,7 @@ description: |
   54 pages
   Self-edited by Arno Müller
   Contains :
-    - a list of 422 Italian writers with birth date and time
+    - a list of 402 Italian writers with birth date and time
     - a list of 100 Italian writers with birth date and without birth time
     - a list of 22 Italian writers where Müller's data differ from Gauquelins'
 parents:
