--- a/data/model/source/muller/afd3-women-booklet.yml
+++ b/data/model/source/muller/afd3-women-booklet.yml
@@ -4,7 +4,7 @@ document:
     - 2021-04-12 13:02:56+01:00: Thierry Graff, creation
 
 name: Astro-Forschungs-Daten 3
-slug: afd3
+slug: afd3-booklet
 type: booklet
 authors:
   - Arno Müller
