--- a/data/model/source/muller/afd5-medics-booklet.yml
+++ b/data/model/source/muller/afd5-medics-booklet.yml
@@ -4,7 +4,7 @@ document:
     - 2021-07-17 21:48:57+02:00: Thierry Graff, creation
 
 name: Astro-Forschungs-Daten 5
-slug: afd5
+slug: afd5-booklet
 type: booklet
 authors:
   - Arno Müller
