--- a/data/model/source/muller/afd.yml
+++ b/data/model/source/muller/afd.yml
@@ -10,10 +10,10 @@ author: Arno Müller
 description: |
   Five booklets self-published by Arno Müller, 1991 - 1994
   5 volumes containing birth times
-    402 Italian writers
-    612 Famous Men
-    234 Famous Women
-    1145 members of German dynasties
-    1083 members of the French Academie de Medicine
+    1 : 402 Italian writers
+    2 : 612 Famous Men
+    3 : 234 Famous Women
+    4 : 1145 members of German dynasties
+    5 : 1083 members of the French Academie de Medicine
   (total 402+612+234+1145+1083 = 3476)
   In fact, contains more, these are the numbers of published groups.
