--- a/data/model/source/muller/afd5-medics-booklet.yml
+++ b/data/model/source/muller/afd5-medics-booklet.yml
@@ -12,6 +12,6 @@ authors:
 description: |
   AFD5 - 1083 members of the French "Académie de Médecine", Astro-Forschungs-Daten 5, Waldmohr, 1994
   92 pages
-  Contains a list of 1083 members of the French Academie de Medicine
+  Contains a list of 1083 members of the French Academie de Médecine
 parents: 
   - afd
