--- a/data/model/source/newalch.yml
+++ b/data/model/source/newalch.yml
@@ -9,5 +9,5 @@ type: website
 author: Nick Kollesrtrom
 description: |
   Web site https://newalchemypress.com/
-  Gives access to Arno Müller, Suitbert Ertel an Gauquelin data.
+  Gives access to Arno Müller, Suitbert Ertel and Gauquelin data.
   Main page is https://newalchemypress.com/gauquelin/
