--- a/data/model/source/g5.yml
+++ b/data/model/source/g5.yml
@@ -5,9 +5,9 @@ document:
 
 name: Gauquelin5
 slug: g5
-type: website
+type: computer program
 author: Thierry Graff
 description: |
-  Computer program developped to build the open Gauquelin database (current site).
+  Computer program developped to build the Open Gauquelin Database (current site).
   The code is hosted on https://github.com/tig12/gauquelin5
-  See documentation at https://tig12.github.io/gauquelin5
+  Documentation is located at https://tig12.github.io/gauquelin5
