Prepare import of Müller 234 women

--- a/data/model/source/muller/afd3-women-booklet.yml
+++ b/data/model/source/muller/afd3-women-booklet.yml
@@ -14,5 +14,6 @@ description: |
   76 pages
   Self-edited by Arno Müller.
   Contains a list of 234 famous women.
+  Scans of original documents located at https://g5.tig12.net/auxiliary/1993-muller-women/
 parents: 
   - afd
