Continue LERRCP / Cura separation ; add class AFD

--- a/data/model/source/csicop/csicop.yml
+++ b/data/model/source/csicop/csicop.yml
@@ -7,6 +7,6 @@ name: CSICOP
 slug: csicop-committee
 type: organization
 description: |
-  Committee for the Scientific Investigation of Claims of the Paranormal
-  Published a test on the "mars effect" in 1979
+  <b>Committee for the Scientific Investigation of Claims of the Paranormal</b>
+  <br>Published a test on the "mars effect" in 1979
   
