--- a/data/model/source/csicop/si42.yml
+++ b/data/model/source/csicop/si42.yml
@@ -13,8 +13,9 @@ authors:
   - Michel Gauquelin
   - Francoise Gauquelin
 description: |
-  Skeptical Inquier VOL IV NO. 2 WINTER 1979-80 contains the only known published list of the CSICOP test.
-  See https://tig12.github.io/gauquelin5/csicop.html for more informations.
+  Skeptical Inquier VOL IV NO. 2 WINTER 1979-80
+  <br>Contains the only known published list of the CSICOP test.
+  <br>See <a href="https://tig12.github.io/gauquelin5/csicop.html">tig12.github.io/gauquelin5/csicop.html</a> for more informations.
 parents:
   - csicop-committee
   
