--- a/data/model/source/eminence/math/bourbaki.yml
+++ b/data/model/source/eminence/math/bourbaki.yml
@@ -7,7 +7,7 @@ slug: bourbaki-histoire
 
 type: book
 
-title: Éléments d'histoire des Mathématiques
+name: Éléments d'histoire des Mathématiques
 authors:
   - Nicolas Bourbaki
 edition: |
