--- a/data/model/source/eminence/math/dieudonne.yml
+++ b/data/model/source/eminence/math/dieudonne.yml
@@ -7,7 +7,7 @@ slug: dieudonne-histoire
 
 type: book
 
-title: Abrégé d'histoire des mathématiques
+name: Abrégé d'histoire des mathématiques
 authors:
   - Jean Dieudonné
 edition: |
