--- a/data/model/source/eminence/math/escofier.yml
+++ b/data/model/source/eminence/math/escofier.yml
@@ -7,7 +7,7 @@ slug: escofier
 
 type: book
 
-title: Histoire des mathématiques
+name: Histoire des mathématiques
 authors:
   - Jean-Pierre Escofier
 edition: |
