--- a/data/model/source/eminence/math/irem.yml
+++ b/data/model/source/eminence/math/irem.yml
@@ -7,7 +7,7 @@ slug: irem
 
 type: book
 
-title: Histoires de problèmes. Histoire des mathématiques
+name: Histoires de problèmes. Histoire des mathématiques
 authors:
   - Commission Inter-IREM Epistémologie et Histoire des Mathématiques
 edition: |
