--- a/data/model/source/eminence/math/peiffer-dahan-dalmenico.yml
+++ b/data/model/source/eminence/math/peiffer-dahan-dalmenico.yml
@@ -8,7 +8,7 @@ slug: peiffer-dahan-dalmenico
 
 type: book
 
-title: Une histoire des mathématiques - Routes et dédales
+name: Une histoire des mathématiques - Routes et dédales
 authors: 
   - Amy Dahan-Dalmedico
   - Jeanne Peiffer
