--- a/data/model/source/newalch.yml
+++ b/data/model/source/newalch.yml
@@ -8,6 +8,6 @@ slug: newalch
 type: website
 author: Nick Kollesrtrom
 description: |
-  Web site https://newalchemypress.com/
-  Gives access to Arno Müller, Suitbert Ertel and Gauquelin data.
-  Main page is https://newalchemypress.com/gauquelin/
+  Web site <a href="https://newalchemypress.com/">newalchemypress.com</a>.
+  <br>Gives access to Arno Müller, Suitbert Ertel and Gauquelin data.
+  <br>Main page for Gauquelin data is <a href="https://newalchemypress.com/gauquelin/">newalchemypress.com/gauquelin</a>
