--- a/data/model/source/cura5.yml
+++ b/data/model/source/cura5.yml
@@ -9,8 +9,9 @@ slug: cura5
 type: website
 author: Patrice Guinard
 description: |
-  The Open Gauquelin Database (current site) uses version 5 of CURA data. Since November 2020, Cura database became closed data. Data published after this date are not used by the Open Gauquelin Database.
-  Version of Cura data used by the Open Gauquelin Database is available through archive.org at
-  https://web.archive.org/web/20200916073026/http://cura.free.fr/gauq/17archg.html
+  The Open Gauquelin Database (current site) uses version 5 of CURA data.
+  <br>Since November 2020, Cura database became closed data. Data published after this date on Cura web site are not used by the Open Gauquelin Database.
+  <br>Version 5 of Cura data is available through 
+  <a href="https://web.archive.org/web/20200916073026/http://cura.free.fr/gauq/17archg.html">archive.org</a>
 parents:
   - lerrcp
