--- a/data/model/source/gauquelin/lerrcp.yml
+++ b/data/model/source/gauquelin/lerrcp.yml
@@ -10,6 +10,6 @@ authors:
   - Michel Gauquelin
   - Françoise Gauquelin
 description: |
-  Laboratoire d'Étude des Relations entre Rythmes Cosmiques et Psycho-physiologiques
-  Structure used by Michel and Françoise Gauquelin to publish their data and results, between 1970 and 1984.
-  Main information source of the Open Gauquelin Database (current site).
+  <b>Laboratoire d'Étude des Relations entre Rythmes Cosmiques et Psycho-physiologiques</b>
+  <br>Structure used by Michel and Françoise Gauquelin to publish their data and results, between 1970 and 1984.
+  <br>Main information source of the Open Gauquelin Database (current site).
