--- a/data/model/source/muller/afd1-writers-list-100.yml
+++ b/data/model/source/muller/afd1-writers-list-100.yml
@@ -10,11 +10,11 @@ authors:
   - Nick Kollerstrom
   - Thierry Graff
 description: |
-  List of 100 Italian writers without birth time.
-  Comes from Astro-Forschungs-Daten 1, Arno Müller, Waldmohr, 1991 - pp 25 - 27
-  Text file built by Nick Kollerstrom (scan) and Thierry Graff (OCR and corrections)
-  Located in raw data versioned with Gauquelin5 program, in
-  data/raw/newalchemypress.com/05-muller-writers/muller-afd1-100-writers.txt
+  List of 100 Italian writers without birth time coming from Astro-Forschungs-Daten 1, Arno Müller, Waldmohr, 1991 - pp 25 - 27
+  <br>Text file built by Nick Kollerstrom (scan) and Thierry Graff (OCR and corrections)
+  <br>Integration to Open Gauquelin database : <a href="https://github.com/tig12/gauquelin5/blob/master/data/raw/newalchemypress.com/05-muller-writers/muller-afd1-100-writers.txt">muller-afd1-100-writers.txt</a>
+  <br>Scans of original document can be downloaded from <a href="https://g5.tig12.net/auxiliary/1993-muller-women/">g5.tig12.net</a>
+  <br>More information about this file : <a href="https://newalchemypress.com/gauquelin/research5.php">newalchemypress.com</a> and <a href="https://tig12.github.io/gauquelin5/newalch-muller402.html">tig12.github.io</a>.
 parents:
   - afd1-booklet
   - g5
