--- a/data/model/source/muller/afd1-writers-list-402.yml
+++ b/data/model/source/muller/afd1-writers-list-402.yml
@@ -8,11 +8,10 @@ slug: afd1
 type: file
 author: Nick Kollerstrom
 description: |
-  Excel file containing a list of 402 Italian writers.
-  Original URL : https://newalchemypress.com/gauquelin/gauquelin_docs/5muller_writers.xlsx
-  Details about this file on https://newalchemypress.com/gauquelin/research5.php
-  Integrated to Gauquelin5 program as data/raw/newalchemypress.com/05-muller-writers/5muller_writers.csv
+  Excel file containing a list of 402 Italian writers, made available online by Nick Kollerstrom.
+  <br>Original URL : <a href="https://newalchemypress.com/gauquelin/gauquelin_docs/5muller_writers.xlsx">5muller_writers.xlsx</a>.
+  <br>Integration to Open Gauquelin database : <a href="https://github.com/tig12/gauquelin5/blob/master/data/raw/newalchemypress.com/05-muller-writers/5muller_writers.csv">5muller_writers.csv</a>
+  <br>More information about this file : <a href="https://newalchemypress.com/gauquelin/research5.php">newalchemypress.com</a> and <a href="https://tig12.github.io/gauquelin5/newalch-muller402.html">tig12.github.io</a>.
 parents:
   - afd1-booklet
   - newalch
-                                                                                                          
