--- a/data/model/source/muller/afd3-women-list.yml
+++ b/data/model/source/muller/afd3-women-list.yml
@@ -11,9 +11,10 @@ authors:
   - Thierry Graff
 description: |
   List of 234 famous women, from Astro-Forschungs-Daten 3, Arno Müller, Waldmohr, 1993
-  Text file built by Nick Kollerstrom (scan) and Thierry Graff (OCR and corrections), located in raw data versioned with Gauquelin5 program, see
-  https://github.com/tig12/gauquelin5/tree/master/data/raw/muller/afd3-women
-  Scans of original documents are located at https://g5.tig12.net/auxiliary/1993-muller-women/
+  <br>Text file built by Nick Kollerstrom (scan) and Thierry Graff (OCR and corrections).
+  <br>Integration to Open Gauquelin database : <a href="https://github.com/tig12/gauquelin5/tree/master/data/raw/muller/afd3-women">muller-afd3-women.txt</a>.
+  <br>Scans of original documents can be downloaded from <a href="https://g5.tig12.net/auxiliary/1993-muller-women/">g5.tig12.net</a>.
+  <br>More information about this file : <a href="https://tig12.github.io/gauquelin5/newalch-muller234.html">tig12.github.io</a>.
 parents:
   - afd3-booklet
   - g5
