--- a/data/model/source/muller/afd5-medics-booklet.yml
+++ b/data/model/source/muller/afd5-medics-booklet.yml
@@ -10,7 +10,8 @@ authors:
   - Arno Müller
   - Suitbert Ertel
 description: |
-  AFD5 - 1083 members of the French "Académie de Médecine", Astro-Forschungs-Daten 5, Waldmohr, 1994
-  92 pages
+  Booklet Astro-Forschungs-Daten 5, Waldmohr, 1994
+  <br>92 pages, self-edited by Arno Müller.
+  <br>Contains a list of 1083 members of the French "Académie de Médecine"
 parents: 
   - afd
