--- a/data/model/source/newalch.yml
+++ b/data/model/source/newalch.yml
@@ -11,3 +11,6 @@ description: |
   Web site <a href="https://newalchemypress.com/">newalchemypress.com</a>.
   <br>Gives access to Arno Müller, Suitbert Ertel and Gauquelin data.
   <br>Main page for Gauquelin data is <a href="https://newalchemypress.com/gauquelin/">newalchemypress.com/gauquelin</a>
+parents:
+  - lerrcp
+  - afd
