--- a/data/model/source/muller/afd5-medics-list.yml
+++ b/data/model/source/muller/afd5-medics-list.yml
@@ -8,7 +8,8 @@ slug: afd5
 type: file
 author: Arno Müller
 description: |
-  Text file containing a list of 1083 physicians, made available online by Nick Kollerstrom.
+  Text file containing a list of 1083 physicians, coming from Astro-Forschungs-Daten 5.
+  <br>Made available online by Nick Kollerstrom.
   <br>Original URL : <a href="https://newalchemypress.com/gauquelin/gauquelin_docs/5a_muller_medics.txt">5a_muller_medics.txt</a>.
   <br>Integration to Open Gauquelin database : <a href="https://github.com/tig12/gauquelin5/blob/master/data/raw/newalchemypress.com/05-muller-medics/5a_muller-medics-utf8.txt">5a_muller-medics-utf8.txt</a>.
   <br>More information about this file : <a href="https://newalchemypress.com/gauquelin/research5.php">newalchemypress.com</a> and <a href="https://tig12.github.io/gauquelin5/newalch-muller1083.html">tig12.github.io</a>.
