Adapt cura A export to recent changes + several debugs

--- a/data/model/source/gauquelin/lerrcp.yml
+++ b/data/model/source/gauquelin/lerrcp.yml
@@ -3,7 +3,7 @@ document:
   history:
     - 2021-07-19 20:37:10+02:00: Thierry Graff, creation
 
-name: LERRCP
+name: LERRCP (Gauquelin)
 slug: lerrcp
 type: organization
 authors:
