--- a/data/model/source/muller/afd.yml
+++ b/data/model/source/muller/afd.yml
@@ -3,7 +3,7 @@ document:
   history: 
     - 2020-05-16 01:32:26+02:00, Thierry Graff : Creation
 
-name: Astro-Forschungs-Daten
+name: Astro-Forschungs-Daten (Müller)
 slug: afd
 type: booklets
 author: Arno Müller
