--- a/data/model/source/cura5.yml
+++ b/data/model/source/cura5.yml
@@ -10,8 +10,7 @@ type: website
 author: Patrice Guinard
 description: |
   Web site containing Gauquelin data.
-  <br>Since November 2020, Cura database became closed data. Data published after this date on Cura web site are not used by the Open Gauquelin Database.
-  <br>The Open Gauquelin Database uses version 5 of Cura data, available through 
+  <br>Since November 2020, Cura database became closed data. Data published after this date on Cura web site are not used by the Open Gauquelin Database. Version 5 of Cura data is used, available through 
   <a href="https://web.archive.org/web/20200916073026/http://cura.free.fr/gauq/17archg.html">archive.org</a>
 parents:
   - lerrcp
