Add generic tweak to db and apply to Müller 234 women

--- a/data/model/source/gauquelin/lerrcp.yml
+++ b/data/model/source/gauquelin/lerrcp.yml
@@ -13,4 +13,5 @@ description: |
   <b>Laboratoire d'Étude des Relations entre Rythmes Cosmiques et Psycho-physiologiques</b>
   <br>Structure used by Michel and Françoise Gauquelin to publish their data and results, between 1970 and 1984.
   <br>Main information source of the Open Gauquelin Database (current site).
+  <br>Published more than 30 booklets ; 10 booklets containing birth times of famous persons are used to build current database.
   
